# launchpad_audio_visualizer

./: LICENSE  README.md  audio_visualization.py  launchpad_cheat_sheet.txt  main.py  pyproject.toml  requirements.txt
core/: audio_getter.py  capture_audio.py  config.py  constants.py  laucnhpad_visualization.py  state.py
utils/: general.py  logger.py
