[project]
name = "launchpad-audio-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "launchpad-py>=0.9.1",
    "mido>=1.3.3",
    "numpy>=2.3.2",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "python-rtmidi>=1.5.8",
    "sounddevice>=0.5.2",
]
